# linear_algebra

./: .gitmodules  CMakeLists.txt  combined_reference_matrix.hpp  combined_reference_vector.hpp  dep.json  diagonal_matrix.hpp  dynamic_sized_matrix.hpp  fixsized_matrix.hpp  fixsized_vector.hpp  gram_schmidt.cpp  main.cpp  matrix.hpp  modular_arithmetic.hpp  permutation.hpp  prime_number.hpp  resizeable_vector.hpp  set.hpp  type_cast.hpp  vector.hpp  vector_space.hpp  vector_test.cpp
matrix/: combined_reference_matrix.hpp  diagonal_matrix.hpp  dynamic_sized_matrix.hpp  fixsized_matrix.hpp  matrix.hpp
vector/: combined_reference_vector.hpp  fixsized_vector.hpp  reference_vector.hpp  resizeable_vector.hpp  vector.hpp
